--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.organization=thoom-github
 
-sonar.projectKey=grand
+sonar.projectKey=thoom_grand
 sonar.projectName=gRand: Random String Generator
 
 sonar.sources=./
